Son Dez 25 10:07:19 CET 2005 <thp@perli.net>
	* Fixed "add channel" dialog "OK" button handling (works again)

Don Dez  8 20:16:40 CET 2005 <thp@perli.net>
	+ Added "edit channel" dialog
	+ Added "libopmlwriter.py" (a dirty hack to write opml format)
	+ Added "export to OPML" functionality
	* Fixed wget calls (not using /usr/bin/wget, but "wget", using $PATH)
	* Wget detection code on startup with warning when not found
	* Updated AUTHORS list in about dialog
	* Updated TODO list

Mit Nov 23 20:46:33 CET 2005 <thp@perli.net>
	* Improved download status list support
	- Removed download status window (code still in codebase)
	+ Added ability to remove downloads from download status list
	* Prohibit downloading the same podcast twice
	* Port "?" handling and "%20" handling in URLs from gPodder 0.4
	* Cancel all download threads on gPodder exit ("clean shutdown")

Die Nov 22 23:03:39 CET 2005 <thp@perli.net>
	+ Added download status list support

Tue Nov 22 15:12:10 CET 2005 <tosh@cs.tu-berlin.de>
	* Build deb packages
	* Changed TreeView model, mark already downloaded podcasts
	* Add Drag and Drop suppurt for adding channels
	* Set icon in window title
	* Add deb rule in Makefile
	+ Added deb package build instructions doc/dev/debian.txt

Son Nov 20 22:28:10 CET 2005 <thp@perli.net>
	* Fixed version info reading in setup.py
	+ Added "INSTALL" file
	+ Updated TODO list
	+ Added GPL (file COPYING)

Sam Nov 19 18:17:35 CET 2005 <thp@perli.net>
	+ Created ChangeLog
	* Updated TODO list
	* Cleanup of source tree
	* Makefile changed to fit to new source structure
	* Unified version info (only have to edit bin/gpodder)
