@@ -7,9 +7,8 @@
  * generate a Debian package (for Debian Sarge & Ubuntu Breezy)
 
  * add downloaded feeds tab
- * implement properties dialog
- * properties: set http proxy or use gnome's proxy setting
-   (suggested by alabrosse.ext@rd.francetelecom.fr)
+
+
 
   == 0.6 / non-release-cricital ==
 
@@ -18,6 +17,10 @@
    
  * check if threads deleted from download status
    list make the gui freeze and why and FIX ;)
+
+ * (properties: set http proxy) --> done
+   ---> or use gnome's proxy setting <---
+   (suggested by alabrosse.ext@rd.francetelecom.fr)
 
  * sort view
  * improve error handler
