@@ -6,9 +6,9 @@
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (Makefile reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.5-svn"
-__date__      = "2005-12-08"
-__copyright__ = "Copyright (c) 2005 %s. All rights reserved." %__author__
+__version__   = "0.5-svn_pro"
+__date__      = "2006-01-09"
+__copyright__ = "Copyright (c) 2005-2006 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
 import sys,os
