@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Thu Dec  8 20:37:43 2005
+# Generated on Mon Jan  9 00:51:18 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -44,8 +44,8 @@ import libgpodder
 app_name = "gpodder"
 app_version = "unknown" # will be set in main() call
 app_authors = [ "Thomas Perl <thp@perli.net>", "Peter Hoffmann <tosh@cs.tu-berlin.de>" ]
-app_copyright = "Copyright (c) 2005 Thomas Perl"
-app_website = "http://www.perli.net/projekte/gpodder/"
+app_copyright = "Copyright (c) 2005-2006 Thomas Perl"
+app_website = "http://perli.net/projekte/gpodder/"
 
 #glade_dir = "../data"
 glade_dir = "/usr/share/gpodder/"
@@ -250,7 +250,8 @@ class Gpodder(SimpleGladeApp):
     def on_itemPreferences_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemPreferences_activate called with self.%s" % widget.get_name()
-        self.not_implemented( "the preferences dialog")
+        #self.not_implemented( "the preferences dialog")
+        Gpodderproperties()
     #-- Gpodder.on_itemPreferences_activate }
 
     #-- Gpodder.on_itemAddChannel_activate {
@@ -559,16 +560,62 @@ class Gpodderchannel(SimpleGladeApp):
     #-- Gpodderchannel.on_btnCancel_clicked }
 
 
+class Gpodderproperties(SimpleGladeApp):
+    def __init__(self, path="gpodder.glade",
+                 root="gPodderProperties",
+                 domain=app_name, **kwargs):
+        path = os.path.join(glade_dir, path)
+        SimpleGladeApp.__init__(self, path, root, domain, **kwargs)
+
+    #-- Gpodderproperties.new {
+    def new(self):
+        if libgpodder.isDebugging():
+            print "A new %s has been created" % self.__class__.__name__
+        gl = gPodderLib()
+        self.httpProxy.set_text( gl.http_proxy)
+        self.ftpProxy.set_text( gl.ftp_proxy)
+    #-- Gpodderproperties.new }
+
+    #-- Gpodderproperties custom methods {
+    #   Write your own methods here
+    #-- Gpodderproperties custom methods }
+
+    #-- Gpodderproperties.on_gPodderProperties_destroy {
+    def on_gPodderProperties_destroy(self, widget, *args):
+        if libgpodder.isDebugging():
+            print "on_gPodderProperties_destroy called with self.%s" % widget.get_name()
+    #-- Gpodderproperties.on_gPodderProperties_destroy }
+
+    #-- Gpodderproperties.on_btnOK_clicked {
+    def on_btnOK_clicked(self, widget, *args):
+        if libgpodder.isDebugging():
+            print "on_btnOK_clicked called with self.%s" % widget.get_name()
+        gl = gPodderLib()
+        gl.http_proxy = self.httpProxy.get_text()
+        gl.ftp_proxy = self.ftpProxy.get_text()
+        gl.propertiesChanged()
+        self.gPodderProperties.destroy()
+    #-- Gpodderproperties.on_btnOK_clicked }
+
+    #-- Gpodderproperties.on_btnCancel_clicked {
+    def on_btnCancel_clicked(self, widget, *args):
+        if libgpodder.isDebugging():
+            print "on_btnCancel_clicked called with self.%s" % widget.get_name()
+        self.gPodderProperties.destroy()
+    #-- Gpodderproperties.on_btnCancel_clicked }
+
+
 #-- main {
 
 def main( __version__ = None):
     global app_version
-    
+
     gtk.gdk.threads_init()
     app_version = __version__
     g_podder = Gpodder()
     #g_podder_status = Gpodderstatus()
     #g_podder_channel = Gpodderchannel()
+    #g_podder_properties = Gpodderproperties()
 
     g_podder.set_icon()
     g_podder.run()
