@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Thu Dec  8 20:37:43 2005
+# Generated on Mon Jan  9 00:51:18 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -168,12 +168,46 @@ class Gpodderchannel(SimpleGladeApp):
     #-- Gpodderchannel.on_btnCancel_clicked }
 
 
+class Gpodderproperties(SimpleGladeApp):
+
+    def __init__(self, path="gpodder.glade",
+                 root="gPodderProperties",
+                 domain=app_name, **kwargs):
+        path = os.path.join(glade_dir, path)
+        SimpleGladeApp.__init__(self, path, root, domain, **kwargs)
+
+    #-- Gpodderproperties.new {
+    def new(self):
+        print "A new %s has been created" % self.__class__.__name__
+    #-- Gpodderproperties.new }
+
+    #-- Gpodderproperties custom methods {
+    #   Write your own methods here
+    #-- Gpodderproperties custom methods }
+
+    #-- Gpodderproperties.on_gPodderProperties_destroy {
+    def on_gPodderProperties_destroy(self, widget, *args):
+        print "on_gPodderProperties_destroy called with self.%s" % widget.get_name()
+    #-- Gpodderproperties.on_gPodderProperties_destroy }
+
+    #-- Gpodderproperties.on_btnOK_clicked {
+    def on_btnOK_clicked(self, widget, *args):
+        print "on_btnOK_clicked called with self.%s" % widget.get_name()
+    #-- Gpodderproperties.on_btnOK_clicked }
+
+    #-- Gpodderproperties.on_btnCancel_clicked {
+    def on_btnCancel_clicked(self, widget, *args):
+        print "on_btnCancel_clicked called with self.%s" % widget.get_name()
+    #-- Gpodderproperties.on_btnCancel_clicked }
+
+
 #-- main {
 
 def main():
     g_podder = Gpodder()
     g_podder_status = Gpodderstatus()
     g_podder_channel = Gpodderchannel()
+    g_podder_properties = Gpodderproperties()
 
     g_podder.run()
 
