@@ -1,3 +1,7 @@
+Mon, 09 Jan 2006 00:13:10 +0100 <thp@perli.net>
+	+ Added gPodder Properties dialog with http/ftp proxy settings
+	+ Added very basic config file support to gPodderLib, for proxy
+
 Son Dez 25 10:07:19 CET 2005 <thp@perli.net>
 	* Fixed "add channel" dialog "OK" button handling (works again)
 
